<resources>
    <string name="app_name">Diseño Responsivo del Inicio de Sesión</string>

    <string name="welcome_title">Bienvenido</string>
    <string name="welcome_subtitle">Para comenzar inicia sesión con tu usuario y contraseña de Banco del Pacífico</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="create_account_button">Crear usuario y contraseña</string>
    <string name="request_products">SOLICITA MÁS PRODUCTOS</string>
    <string name="savings_account">Cuenta de ahorros</string>
    <string name="checking_account">Cuenta Corriente</string>
    <string name="investment">Inversión</string>
</resources>